# gpu-based-trace-analyzer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/analysis/: AnalysisKernels.h  Statistics.h
include/common/: cuda_check.h  types.h
include/data/: AnalysisResults.h  TraceDataSoA.h
include/matching/: CollectiveGrouping.h  P2PMatching.h
include/reader/: OTF2SoAReader.h
scripts/: run_npb.sh
src/: main.cu
src/analysis/: AnalysisKernels.cu  Statistics.cpp
src/matching/: CollectiveGrouping.cpp  P2PMatching.cu
src/reader/: OTF2SoAReader.cpp
test/: CMakeLists.txt  test_analysis_kernels.cu  test_p2p_matching.cu  test_statistics.cpp
